Construct URLSearchParams from array or object https://bugs.webkit.org/show_bug.cgi?id=166973

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/url/urlsearchparams-constructor-expected.txt:

Source/WebCore:

Covered by newly passing web platform tests.

* html/URLSearchParams.cpp:
(WebCore::URLSearchParams::URLSearchParams):
(WebCore::URLSearchParams::create):
(WebCore::URLSearchParams::get):
(WebCore::URLSearchParams::has):
(WebCore::URLSearchParams::sort):
(WebCore::URLSearchParams::set):
(WebCore::URLSearchParams::getAll):
(WebCore::URLSearchParams::remove):
(WebCore::URLSearchParams::Iterator::next):
* html/URLSearchParams.h:
(WebCore::URLSearchParams::create):
(WebCore::URLSearchParams::pairs):
(WebCore::URLSearchParams::operator const Vector<std::pair<String, String>>&): Deleted.
* html/URLSearchParams.idl:
* platform/URLParser.cpp:
(WebCore::URLParser::serialize):
* platform/URLParser.h:

Source/WebKit2:

* NetworkProcess/capture/NetworkCaptureManager.cpp:
(WebKit::NetworkCapture::Manager::fuzzyMatchURLs):
Change std::pair's first/second to WTF::KeyValuePair's key/value.



Canonical link: https://commits.webkit.org/184274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210946 268f45cc-cd09-0410-ab3c-d52691b4dbfc